# speechify-api-sdks

./: .gitignore  README.md
.github/workflows/: docs.yaml  test-browser.yaml  test-node.yaml  test.yaml
nodejs/: README.md  package.json  pnpm-lock.yaml  vitest.config.browser.ts  vitest.workspace.ts
nodejs/docs/: index.html  modules.html
nodejs/docs/assets/: navigation.js  search.js
nodejs/docs/classes/: Speechify.html  SpeechifyError.html
nodejs/docs/interfaces/: AccessTokenResponse.html  AudioSpeechRequest.html  AudioSpeechRequestOptions.html  AudioSpeechResponse.html  AudioStreamRequest.html  SpeechMark.html  SpeechMarkChunk.html  SpeechifyOptions.html  VoiceLanguage.html  VoiceModel.html  VoicesCreateRequest.html  VoicesCreateResponse.html  VoicesListEntry.html
nodejs/docs/types/: AccessTokenScope.html  AudioSpeechFormat.html  AudioStreamFormat.html  VoiceModelName.html  VoicesListResponse.html
nodejs/scripts/: build.sh
nodejs/src/: fetch.ts  index.test.ts  index.ts  test-helper.mjs  types.ts  version.ts
nodejs/src/player/: player.html  player.ts  player.types.ts
nodejs/src/ui-components/: video-player.component.ts
speechify-python-sdk/: .env  LICENSE.txt  README.md  pyproject.toml  requirements.txt
speechify-python-sdk/src/speechify_python_sdk/: __about__.py  speechify.py
speechify-python-sdk/src/speechify_python_sdk/lib/: config.py  speechify_audio.py  speechify_auth.py  speechify_requests.py  speechify_voices.py
speechify-python-sdk/src/speechify_python_sdk/models/: create_voice_request.py  create_voice_response.py  generate_audio_request.py  generate_audio_response.py  generate_oauth_token_request.py  generate_oauth_token_response.py  language_response.py  stream_audio_response.py  voice_model.py  voices_response.py
speechify-python-sdk/tests/: __init__.py  test_speechify.py
